[package]
name = "des"
description = "Parallel Data Encryption Standard (DES) implementation"
version = "0.0.1"
authors = ["Antoni Boucher <bouanto@zoho.com>"]
license = "MIT"
repository = "https://framagit.org/antoyo/des-rs"

[dependencies]
crossbeam = "^0.1"
num_cpus = "0.2"
simple_parallel = "0.3"
