[package]
name = "des"
description = "Parallel Data Encryption Standard (DES) implementation"
version = "0.0.2-pre"
authors = ["Antoni Boucher <bouanto@zoho.com>"]
license = "MIT"
repository = "https://framagit.org/antoyo/des-rs"

[dependencies]
rayon = "^0.4"

[package.metadata.release]
upload-doc = true
